--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "cross-env NODE_ENV=production tsc && vite build",
+    "test": "vitest run",
     "preview": "vite preview"
   },
   "peerDependencies": {
